Bug 130346 - Dialog "Define Database Range" in Calc is Too high, OK/Cancel button fall outside of screen range
Summary: Dialog "Define Database Range" in Calc is Too high, OK/Cancel button fall out...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: andreas_k
URL:
Whiteboard: target:7.0.0
Keywords: difficultyBeginner, easyHack, skillDesign, topicUI
Depends on:
Blocks: GTK3-Dialog-High
  Show dependency treegraph
 
Reported: 2020-02-01 10:56 UTC by Kevin Suo
Modified: 2025-11-30 19:59 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot (107.85 KB, image/png)
2020-02-01 10:56 UTC, Kevin Suo
Details
proposal (27.23 KB, image/png)
2020-02-24 08:54 UTC, andreas_k
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kevin Suo 2020-02-01 10:56:44 UTC
Created attachment 157578 [details]
screenshot

Steps to Reproduce:
1. New Spreadsheet;
2. Go to "Data > Define Range", and click the "Options" within this dialog.

Current Behaviour:
Help, Cancle and OK falls outside of the screen area, not able to click these buttons.

Expected:
The maximum dialog height should be the avaiable screen height when "Options" is clicked, so that all these buttons are visible.

Version: 7.0.0.0.alpha0+
Build ID: 0a6ec034dc8088d9de399142bb193ae7d338e645
CPU threads: 4; OS: Linux 5.4; UI render: default; VCL: gtk3; 
Locale: zh-CN (zh_CN.UTF-8); UI-Language: en-US
Calc: threaded

OS: Fedora 31 x64.
Display: 1366*768, Thinkpad X230i laptop.
Comment 1 Roman Kuznetsov 2020-02-05 17:10:25 UTC
I don't have a low resolution screen for check it, but it looks really high when Options section is opened. 

possibly we can move that Options block to right side of the dialog?

UX-team?
Comment 2 Heiko Tietze 2020-02-17 14:23:16 UTC
We require a minimum of 1280x768px and the dialog is 294x430px with Options collapsed or 622px when expanded (KF5). Some other dialogs: 534 properties, 545 functions, 573 conditional formatting.

I wouldn't move the options to the right of the values as this makes not much sense to me. Options is a GtkBox with 8 elements having a spacing of 6. Our HIG defines a spacing between list items of 3 [1], which might solve the problem. If not, the list of ranges is quite large and could be a bit smaller.

Code pointer: sc/uiconfig/scalc/ui/definedatabaserangedialog.ui

[1] https://wiki.documentfoundation.org/Design/Guidelines/PropertyDialog
Comment 3 ahmad_g 2020-02-19 20:22:50 UTC
I tried to reproduce the bug at resolution 1368*768 
After expanding Options .. Help, Cancel and Ok were visible to be clicked.
Comment 4 andreas_k 2020-02-20 00:36:48 UTC
I can't reproduce with GTK3 and QT backend.
Comment 5 Heiko Tietze 2020-02-20 11:33:06 UTC
(In reply to ahmad_g from comment #3)
> I tried to reproduce the bug at resolution 1368*768 

It also depends on the desktop environment and the used theme how controls are sized, placed, and spaced. Anyway, the dialog is quite high when expanded and making it smaller is an advantage. The proposed spacing between controls also makes the dialog HIG compliant.
Comment 6 andreas_k 2020-02-24 08:54:53 UTC
Created attachment 158132 [details]
proposal

An proposal for an fix. Make the dialog 2 columns instead of one and don't hide the options.

The benefit is that the form factor is now way better. The con is that Options are always visible, cause if you hide the options it didn't work well (jumping UI).
Comment 7 Heiko Tietze 2020-02-24 08:59:29 UTC
(In reply to andreas_k from comment #6)
> An proposal for an fix. Make the dialog 2 columns instead of one and don't
> hide the options.

(In reply to Heiko Tietze from comment #2)
> I wouldn't move the options to the right of the values as this makes not
> much sense to me.
Comment 8 andreas_k 2020-02-24 09:14:28 UTC
thanks for the feedback add an patch.

Spacing is now 3 instead of 6 AND user can change the size of the dialog (resizable is now true)

https://gerrit.libreoffice.org/c/core/+/89327
Comment 9 Commit Notification 2020-02-24 10:10:16 UTC
andreas kainz committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/94a4d4d40514e4a9d18f057e0b2c91785be580fb

tdf#130346 Define Database Range Dialog smaler spacing and resizing

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.