tdf#130346 Define Database Range Dialog smaler spacing and resizing

Change-Id: I0c77e5b496f32176766451e8116d758d34acbce1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/89327
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
Tested-by: Jenkins